syntax = "proto3";

option go_package = "./";

message CreateRequest {
  string original_url = 1;
}

message CreateResponse {
  string short_url = 1;
}

message GetRequest {
  string short_url = 1;
}

message GetResponse {
  string original_url = 1;
}

message BatchURL {
  string original_url = 1;
  string correlation_id = 2;
}

message BatchURLResult {
  string short_url = 1;
  string correlation_id = 2;
}

message CreateBatchRequest {
  repeated BatchURL urls = 1;
}

message CreateBatchResponse {
  repeated BatchURLResult urls = 1;
}

message GetUserURLsRequest {}

message UserURL {
  string short_url = 1;
  string original_url = 2;
}

message GetUserURLsResponse {
  repeated UserURL urls = 1;
}

message DeleteBatchRequest {
  repeated string short_urls = 1;
}

message DeleteBatchResponse {}

message GetStatsRequest {}

message GetStatsResponse {
  int32 urls = 1;
  int32 users = 2;
}

service URLService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc CreateBatch(CreateBatchRequest) returns (CreateBatchResponse);
    rpc GetUserURLs(GetUserURLsRequest) returns (GetUserURLsResponse);
    rpc DeleteBatch(DeleteBatchRequest) returns (DeleteBatchResponse);
    rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
}